# ZeroInfinity

./: .gitignore  LICENSE  README.md  paper.tex
Test/: .cproject
Test/src/: IntervalArithmetic.hpp  main.cpp
chapters/: 01_introduction.md  02_related_work.md  03_interval_numbers.md  04_operations.md  05_algebraic_structure.md  06_applications.md  07_conclusion.md  07_implementation.md  08_conclusion.md  08_references.md  09_references.md
figures/: generate_figures.py
illustrations/: README.md  generate_figures.py  visual_complex_number.drawio  visual_interval_arithmetic.drawio  visual_interval_extended.drawio  visual_interval_number.drawio
paper/: paper.tex
test/: .cproject  .gitignore  CMakeLists.txt  README.md
test/src/: ComplexNumber.hpp  Interval.hpp  IntervalArithmetic.hpp  IntervalNumber.hpp  main.cpp
